# SlackFeeder

./: .gitignore  Readme.md  flake.nix  module.nix  pyproject.toml  requirements.nix  requirements_frozen.txt  requirements_override.nix  slackfeeder.py
