[tool.poetry]
name = "slackfeeder"
version = "0.1.0"
description = ""
authors = ["Jakob Klepp <jakob-github@truh.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
aiohttp = "^3.6.2"
aiohttp-basicauth = "^0.1.2"
appdirs = "^1.4.3"
async-timeout = "^3.0.1"
attrs = "^19.3.0"
certifi = "^2019.11.28"
chardet = "^3.0.4"
idna = "^2.8"
multidict = "^4.7.3"
packaging = "^16.8"
pyparsing = "^3.1.1"
requests = "^2.22.0"
six = "^1.10.0"
slacker = "^0.13.0"
toml = "^0.10.0"
urllib3 = "^1.25.7"
yarl = "^1.4.2"
feedgen = "^0.9.0"
bcrypt = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
